--- a/NampulaUI/NampulaUI.csproj
+++ b/NampulaUI/NampulaUI.csproj
@@ -243,6 +243,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cadastro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cadastro.Designer.cs">
+      <DependentUpon>Cadastro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tabela.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -251,6 +257,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Cadastro.resx">
+      <DependentUpon>Cadastro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tabela.resx">
       <DependentUpon>Tabela.cs</DependentUpon>
     </EmbeddedResource>
